--- a/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/style.css
+++ b/trunk/IntraSell_WebShop/WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/style.css
@@ -1,13 +1,13 @@
 A:link
 {
-    COLOR: #000080;
     FONT-FAMILY: Verdana, Verdana, Arial, Helvetica, sans-serif, Helvetica, sans-serif;
+    COLOR: #000080;
     TEXT-DECORATION: none
 }
 A:visited
 {
-    COLOR: #000080;
     FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000080;
     TEXT-DECORATION: none
 }
 A:hover
@@ -17,193 +17,193 @@ A:hover
 }
 BODY
 {
-    SCROLLBAR-FACE-COLOR: #c0c0c0;
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    SCROLLBAR-HIGHLIGHT-COLOR: #000000;
-    SCROLLBAR-SHADOW-COLOR: #ffffff;
-    COLOR: black;
     SCROLLBAR-ARROW-COLOR: #ffcc00;
-    SCROLLBAR-TRACK-COLOR: #505050;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
-    scrollbar-3dLight-Color:#c0c0c0;
+    SCROLLBAR-FACE-COLOR: #c0c0c0;
     SCROLLBAR-DARKSHADOW-COLOR: #c0c0c0;
-    SCROLLBAR-BASE-COLOR: #c0c0c0
+    SCROLLBAR-BASE-COLOR: #c0c0c0;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+	scrollbar-3dLight-Color:#c0c0c0;
+    SCROLLBAR-HIGHLIGHT-COLOR: #000000;
+    COLOR: black;
+    SCROLLBAR-SHADOW-COLOR: #ffffff;
+    FONT-SIZE: 8pt;
+    FONT-WEIGHT: normal;
+    SCROLLBAR-TRACK-COLOR: #505050
 }
 H1
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 16pt;
-    COLOR: #000000;
     FONT-STYLE: normal;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 16pt;
+    FONT-WEIGHT: normal
 }
 H2
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 14pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #666666;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 14pt;
+    FONT-WEIGHT: normal
 }
 H3
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 10pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #db0f21;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 10pt;
+    FONT-WEIGHT: normal
 }
 H4
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 10pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #666666;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 10pt;
+    FONT-WEIGHT: normal
 }
 H5
 {
-    FONT-SIZE: 10pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #0000ff;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 10pt
 }
 H6
 {
-    FONT-SIZE: 8pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #0000ff;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 8pt
 }
 P
 {
-    FONT-SIZE: 8pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: black;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 8pt
 }
 TD
 {
-    FONT-SIZE: 8pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #000000;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 8pt
 }
 TD.marked
 {
-    FONT-SIZE: 8pt;
-    COLOR: #666666;
+    BACKGROUND-COLOR: #efefef;
     FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #efefef
+    COLOR: #666666;
+    FONT-SIZE: 8pt
 }
 TD.marked1
 {
-    FONT-SIZE: 8pt;
-    COLOR: #666666;
+    BACKGROUND-COLOR: #f3f3f3;
     FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #f3f3f3
+    COLOR: #666666;
+    FONT-SIZE: 8pt
 }
 TH
 {
-    BORDER-TOP: gray 1px solid;
-    FONT-SIZE: 8pt;
-    COLOR: black;
+    BACKGROUND-COLOR: #f3f3f3;
     FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #f3f3f3
+    COLOR: black;
+    FONT-SIZE: 8pt;
+    BORDER-TOP: gray 1px solid
 }
 TABLE
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
     COLOR: #666666;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-SIZE: 8pt;
+    FONT-WEIGHT: normal
 }
 TABLE.light
 {
-    BORDER-RIGHT: #666666 1px solid;
+    BORDER-BOTTOM: #666666 3px solid;
+    BORDER-LEFT: #ffff99 3px solid;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #ffff99;
+    FONT-SIZE: 8pt;
     BORDER-TOP: 1px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #ffff99 3px solid;
-    COLOR: #ffff99;
-    BORDER-BOTTOM: #666666 3px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    BORDER-RIGHT: #666666 1px solid
 }
 TEXTAREA
 {
-    BORDER-RIGHT: #666666 0px solid;
+    BORDER-BOTTOM: #666666 1px solid;
+    BORDER-LEFT: #666666 1px solid;
+    BACKGROUND-COLOR: #ffffff;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 8pt;
     BORDER-TOP: #666666 1px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #666666 1px solid;
-    COLOR: #000000;
-    BORDER-BOTTOM: #666666 1px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #ffffff
+    BORDER-RIGHT: #666666 0px solid
 }
 SELECT
 {
-    BORDER-RIGHT: #666666 1px solid;
+    BORDER-BOTTOM: #666666 1px solid;
+    BORDER-LEFT: #666666 1px solid;
+    BACKGROUND-COLOR: #ffffff;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 8pt;
     BORDER-TOP: #666666 1px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #666666 1px solid;
-    COLOR: #000000;
-    BORDER-BOTTOM: #666666 1px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #ffffff
+    BORDER-RIGHT: #666666 1px solid
 }
 INPUT
 {
-    BORDER-RIGHT: #666666 1px solid;
+    BORDER-BOTTOM: #666666 1px solid;
+    BORDER-LEFT: #666666 1px solid;
+    BACKGROUND-COLOR: #ffffff;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 8pt;
     BORDER-TOP: #666666 1px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #666666 1px solid;
-    COLOR: #000000;
-    BORDER-BOTTOM: #666666 1px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #ffffff
+    BORDER-RIGHT: #666666 1px solid
 }
 INPUT.submit
 {
-    BORDER-RIGHT: #666666 0px solid;
+    BORDER-BOTTOM: #666666 0px solid;
+    BORDER-LEFT: #666666 0px solid;
+    BACKGROUND-COLOR: #ffffff;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 8pt;
     BORDER-TOP: #666666 0px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #666666 0px solid;
-    COLOR: #000000;
-    BORDER-BOTTOM: #666666 0px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #ffffff
+    BORDER-RIGHT: #666666 0px solid
 }
 INPUT.extra
 {
-    BORDER-RIGHT: #ffffff 1px solid;
+    BORDER-BOTTOM: #ffffff 1px solid;
+    BORDER-LEFT: #ffffff 1px solid;
+    BACKGROUND-COLOR: #ffffff;
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #000000;
+    FONT-SIZE: 8pt;
     BORDER-TOP: #ffffff 1px solid;
     FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    BORDER-LEFT: #ffffff 1px solid;
-    COLOR: #000000;
-    BORDER-BOTTOM: #ffffff 1px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
-    BACKGROUND-COLOR: #ffffff
+    BORDER-RIGHT: #ffffff 1px solid
 }
 INPUT.radio
 {
-    BORDER-RIGHT: #666666 0px solid;
-    BORDER-TOP: #666666 0px solid;
+    BORDER-BOTTOM: #666666 0px solid;
     BORDER-LEFT: #666666 0px solid;
-    BORDER-BOTTOM: #666666 0px solid
+    BORDER-TOP: #666666 0px solid;
+    BORDER-RIGHT: #666666 0px solid
 }
 INPUT.checkbox
 {
-    BORDER-RIGHT: #666666 0px solid;
-    BORDER-TOP: #666666 0px solid;
+    BORDER-BOTTOM: #666666 0px solid;
     BORDER-LEFT: #666666 0px solid;
-    BORDER-BOTTOM: #666666 0px solid
+    BORDER-TOP: #666666 0px solid;
+    BORDER-RIGHT: #666666 0px solid
 }
 UNKNOWN
 {
-    FONT-WEIGHT: normal;
-    FONT-SIZE: 8pt;
-    COLOR: #666666;
     BORDER-BOTTOM: 2px solid;
-    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
+    FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif;
+    COLOR: #666666;
+    FONT-SIZE: 8pt;
+    FONT-WEIGHT: normal
 }
 all.clsMenuItemNS
 {
@@ -214,15 +214,15 @@ all.clsMenuItemNS
 A.clsMenuItemIE
 {
     FONT: xx-small Verdana;
-    CURSOR: hand;
     COLOR: black;
+    CURSOR: hand;
     TEXT-DECORATION: none
 }
 A.clsMenuItemIE:visited
 {
     FONT: xx-small Verdana;
-    CURSOR: hand;
     COLOR: black;
+    CURSOR: hand;
     TEXT-DECORATION: none
 }
 A.clsMenuItemIE:hover
@@ -231,37 +231,37 @@ A.clsMenuItemIE:hover
 }
 .tab-button
 {
-    BORDER-RIGHT: #c0c0c0 1px solid;
-    PADDING-RIGHT: 3px;
-    BORDER-TOP: #c0c0c0 1px solid;
-    PADDING-LEFT: 3px;
-    FONT-WEIGHT: normal;
-    BACKGROUND: #ffffff;
-    PADDING-BOTTOM: 3px;
-    BORDER-LEFT: #c0c0c0 1px solid;
-    WIDTH: 100px;
-    CURSOR: hand;
-    PADDING-TOP: 3px;
     BORDER-BOTTOM: #ffffff 1px solid;
-    HEIGHT: 20px
+    BORDER-LEFT: #c0c0c0 1px solid;
+    PADDING-BOTTOM: 3px;
+    PADDING-LEFT: 3px;
+    WIDTH: 100px;
+    PADDING-RIGHT: 3px;
+    BACKGROUND: #ffffff;
+    HEIGHT: 20px;
+    BORDER-TOP: #c0c0c0 1px solid;
+    CURSOR: hand;
+    FONT-WEIGHT: normal;
+    BORDER-RIGHT: #c0c0c0 1px solid;
+    PADDING-TOP: 3px
 }
 .tab-body
 {
-    BORDER-RIGHT: #c0c0c0 1px solid;
-    PADDING-RIGHT: 10px;
-    BORDER-TOP: #c0c0c0 1px solid;
-    PADDING-LEFT: 10px;
     Z-INDEX: 1;
-    BACKGROUND: white;
-    LEFT: 220px;
-    VISIBILITY: hidden;
-    PADDING-BOTTOM: 10px;
-    BORDER-LEFT: #c0c0c0 1px solid;
-    WIDTH: 600px;
-    PADDING-TOP: 10px;
     BORDER-BOTTOM: #c0c0c0 1px solid;
     POSITION: absolute;
-    TOP: 480px
+    BORDER-LEFT: #c0c0c0 1px solid;
+    PADDING-BOTTOM: 10px;
+    PADDING-LEFT: 10px;
+    WIDTH: 600px;
+    PADDING-RIGHT: 10px;
+    BACKGROUND: white;
+    VISIBILITY: hidden;
+    BORDER-TOP: #c0c0c0 1px solid;
+    TOP: 480px;
+    BORDER-RIGHT: #c0c0c0 1px solid;
+    PADDING-TOP: 10px;
+    LEFT: 220px
 }
 A:link
 {
@@ -271,5 +271,8 @@ A:link
 }
 .category
 {
+    MARGIN-TOP: 2px;
+    MARGIN-BOTTOM: 5px;
+    MARGIN-LEFT: 0px;
     FONT-SIZE: 10pt
 }
